updated finall Aa on 1.2 version

--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <html>
 <head>
-<h1>Git index file. Version 1.2Aa</h1>
-<h2>You can do it.</h2>
-<h3>Added h3 subheading. Thats good</h3>
-</head>
+<h1>Git index file. Version 1.2A</h1>
+<h2>You can do it. Mr Ravish</h2></head>
 <body></body
 </html>
